# utah-tourism-ai

./: .env-example  Dockerfile  README.md  compose.yaml  pyproject.toml  sample-user-prompts.md
src/: __init__.py  database.py  llm_client.py  main.py  mcp_client.py  utah_data.py
static/: style.css
templates/: history.html  index.html  recommendation.html
