[project]
name = "utah-tourism-ai"
version = "0.1.0"
description = "AI-powered Utah tourism recommendation system using Docker Model Runner and MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "openai>=1.50.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.12",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
